# music-player

./: AGENTS.md  LICENSE  README.md  README_EN.md  eslint.config.cjs  index.html  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.husky/: pre-commit
promotes/: 02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  fix-db-init-crash.md  fix-macos-audio-crash.md  gemini-01.md
reviews/: code-review-2026-02-03.md
src/: App.css  App.test.tsx  App.tsx  main.tsx  mockData.ts
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: commands.rs  mod.rs  player.rs  tests.rs
src-tauri/src/database/: mod.rs  operations.rs  schema.rs
src-tauri/src/scanner/: parser.rs
src/components/BottomNav/: BottomNav.tsx
src/components/BottomNav/__tests__/: BottomNav.test.tsx
src/components/Local/: FolderCard.tsx  Local.tsx
src/components/PlayerBar/: PlayerBar.tsx
src/components/PlayerBar/__tests__/: PlayerBar.test.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Sidebar/__tests__/: Sidebar.test.tsx
src/hooks/: useAudioController.ts  useLocalFolders.ts  usePlayerSync.ts  usePlaylists.ts  useTauriEvents.ts  useTracks.ts
src/hooks/__tests__/: useAudioController.test.ts  useLocalFolders.test.ts  usePlaylists.test.ts  useTauriEvents.test.ts  useTracks.test.ts
src/store/: audioStore.ts  playlistStore.ts  uiStore.ts
src/types/: audio.ts
