[package]
name = "music-player"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "music_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = {version = "0.21.1", default-features = false, features = ["symphonia-all", "playback"] }
lofty = "0.22.4"
rusqlite = "0.38.0"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
walkdir = "2"
sha2 = "0.10.9"
hex = "0.4.3"
image = "0.25.9"
tauri-plugin-fs = "2.4.5"

[dev-dependencies]
tempfile = "3.24.0"
